2015-11-04  Orion Poplawski
	* perl/Amanda/Vault.pm: Output the size of each dump
	* installcheck/amvault.pl: Fix for new output

2015-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Services_senddiscover_amgtar.pl:
	  Workaround for File::Temp without newdir function

2015-11-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (_volume_cb): Release the old
	  reservation when changing scribe

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Label.pm: Fix severity
	* perl/Amanda/Message.pm: Fix for code 1 or 2
	* server-src/amlabel.pl: Severity of ERROR is always a failure

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amgtar.pl: Fix

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c (restore): Exit with 1 if BSDTAR-PATH
	  can't be executed
	* application-src/amgtar.c (amgtar_restore): Exit code of 1 is an
	  error
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): Fix BSDTAR default
	  value
	* installcheck/Installcheck/Application.pm (restore): Return the
	  stderr of the application
	* installcheck/Makefile.am (client_tests): Add ambsdtar
	* installcheck/amgtar.pl: Add check
	* installcheck/ambsdtar.pl: New file to check ambsdtar behavior

2015-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Services_senddiscover_amgtar.pl: Fix for
	  maximumm length f a socket path.

2015-10-26  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c (amgtar_discover): Implement the discover
	  API.
	* client-src/senddiscover.c: Pass --device only if device is provided.
	* common-src/ammessage.c: Add message for code 3100005, 3100006,
	  3700012 and 3700013
	* perl/Amanda/Rest/Configs.pm: Improve documentation
	* perl/Amanda/Rest/Services.pm (discover): Many fixes
	* rest-server/bin/app.pl.in: discover service can be called for a
	  config